<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">


    <TextView
        android:id="@+id/exit_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="@string/exit_system"
        android:padding="40dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/exit_dialog_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/continue_go"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="20dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/exit_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>