<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg_corner"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="20dp">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:text="@string/recorder"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="18sp" />-->

        <!--<EditText-->
            <!--android:id="@+id/record_dialog_recorder"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/white_button_bg"-->
            <!--android:inputType="text"-->
            <!--android:padding="10dp"-->
            <!--android:textSize="16sp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/record_wheel_num"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/record_dialog_record_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="如:联轴器"
            android:text="联轴器"
            android:background="@drawable/white_button_bg"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/record_dialog_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/back"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="20dp"
            android:layout_height="1dp" />

        <Button
            android:id="@+id/record_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_button_bg"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>